P4ADEV-4808 Implement extraction API with request and response models
